--- a/gitcidevB-main/eval-git-ci-js-base/reports/junit.xml
+++ b/gitcidevB-main/eval-git-ci-js-base/reports/junit.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuites name="jest tests" tests="1" failures="0" errors="0" time="0.409">
-  <testsuite name="undefined" errors="0" failures="0" skipped="0" timestamp="2025-10-15T12:27:42" time="0.358" tests="1">
+<testsuites name="jest tests" tests="4" failures="0" errors="0" time="0.41">
+  <testsuite name="undefined" errors="0" failures="0" skipped="0" timestamp="2025-10-15T12:34:46" time="0.361" tests="4">
     <testcase classname=" initial task list is empty" name=" initial task list is empty" time="0.002">
+    </testcase>
+    <testcase classname=" addTask ajoute une tâche correctement" name=" addTask ajoute une tâche correctement" time="0">
+    </testcase>
+    <testcase classname=" addTask rejette un nom vide" name=" addTask rejette un nom vide" time="0.005">
+    </testcase>
+    <testcase classname=" addTask rejette un nom non string" name=" addTask rejette un nom non string" time="0">
     </testcase>
   </testsuite>
 </testsuites>
