--- a/gitcidevB-main/eval-git-ci-js-base/reports/junit.xml
+++ b/gitcidevB-main/eval-git-ci-js-base/reports/junit.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuites name="jest tests" tests="4" failures="0" errors="0" time="0.41">
-  <testsuite name="undefined" errors="0" failures="0" skipped="0" timestamp="2025-10-15T12:34:46" time="0.361" tests="4">
-    <testcase classname=" initial task list is empty" name=" initial task list is empty" time="0.002">
+<testsuites name="jest tests" tests="6" failures="0" errors="0" time="1.271">
+  <testsuite name="undefined" errors="0" failures="0" skipped="0" timestamp="2025-10-15T13:00:15" time="1.04" tests="6">
+    <testcase classname=" initial task list is empty" name=" initial task list is empty" time="0.004">
     </testcase>
-    <testcase classname=" addTask ajoute une tâche correctement" name=" addTask ajoute une tâche correctement" time="0">
+    <testcase classname=" addTask ajoute une tâche correctement" name=" addTask ajoute une tâche correctement" time="0.007">
     </testcase>
-    <testcase classname=" addTask rejette un nom vide" name=" addTask rejette un nom vide" time="0.005">
+    <testcase classname=" addTask rejette un nom vide" name=" addTask rejette un nom vide" time="0.025">
     </testcase>
-    <testcase classname=" addTask rejette un nom non string" name=" addTask rejette un nom non string" time="0">
+    <testcase classname=" addTask rejette un nom non string" name=" addTask rejette un nom non string" time="0.002">
+    </testcase>
+    <testcase classname=" toggleTask inverse le statut done" name=" toggleTask inverse le statut done" time="0.002">
+    </testcase>
+    <testcase classname=" toggleTask renvoie une erreur si id inconnu" name=" toggleTask renvoie une erreur si id inconnu" time="0.003">
     </testcase>
   </testsuite>
 </testsuites>
